--- a/models.ipynb
+++ b/models.ipynb
@@ -31,8 +31,8 @@
     "\n",
     "Feature 'Class' is the response variable and it takes value 1 in case of fraud and 0 otherwise.\n",
     "\n",
-    "The data set is obtained from Kaggle"
-    "\n"
+    "The data set is obtained from Kaggle",
+    "\n",
     "https://www.kaggle.com/datasets/mlg-ulb/creditcardfraud"
    ]
   },
